@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: $Id: tkInt.h,v 1.29 2000/08/03 21:02:19 ericm Exp $ 
+ * RCS: $Id: tkInt.h,v 1.30 2000/08/03 21:14:30 ericm Exp $ 
  */
 
 #ifndef _TKINT
@@ -887,8 +887,6 @@ extern int			tkSendSerial;
  * to the outside world:
  */
 
-EXTERN int		Tk_AfterCmd _ANSI_ARGS_((ClientData clientData,
-			    Tcl_Interp *interp, int argc, char **argv));
 EXTERN int		Tk_BellObjCmd _ANSI_ARGS_((ClientData clientData,
 			    Tcl_Interp *interp, int objc, 
 			    Tcl_Obj *CONST objv[]));
