@@ -1,5 +1,12 @@
 2000-08-03  Eric Melski  <ericm@ajubasolutions.com>
 
+	* generic/tkInt.h: Removed Tk_AfterCmd function prototype; the
+	function does not exist (since 7.4p3).
+
+	* generic/tk.h: Removed Tk_AfterCmd => Tcl_AfterCmd #define;
+	nothing in the core uses it, and Tcl_AfterCmd doesn't exist
+	anymore anyway.
+
 	* generic/tkInt.h: Replace Tk_BindCmd prototype with
 	Tk_BindObjCmd prototype.
 
